# django-otp-keygen

./: .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTORS  FUNDING.yml  LICENCE  MANIFEST.in  README.html  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml
demo/: requirements.txt
demo/assets/js/: index.js  jquery.js
demo/conf/: urls.py  views.py  wsgi.py
demo/settings/: __init__.py  base.py  dev.py  prod.py  settings.py
demo/templates/: base.html  docs.html  home.html
demo/templates/components/: footer.html  messages.html  navbar.html  theme.html
demo/templates/partials/: form_field.html
demo/templates/static/css/: daisy5.css
demo/templates/static/js/: index.js  tailwind.js
demo/templates/user/: login.html  register.html
demo/user/: admin.py  forms.py  middleware.py  models.py  urls.py  views.py
demo/user/migrations/: 0001_initial.py  0002_alter_otp_otp_type.py  0003_alter_otp__otp.py
django_otp_keygen/: abstract_model.py  admin.py  constants.py  otp.py  otp_service.py  utils.py
