[metadata]
name = django-otp-keygen
version = 0.1.0
description = Django OTP key generator and validator
long_description = file: README.md
long_description_content_type = text/markdown
author = Mohit Prajapat
author_email = mohitdevelopment2001@gmail.com
license = MIT
url = https://github.com/mohitprajapat2001/django-otp-keygen
classifiers =
    Programming Language :: Python :: 3
    Framework :: Django
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True
install_requires =
    Django>=5.0

[options.package_data]
* = *.txt, *.md
